crates/rustics-macros/tests/fixtures/fail/bad_operator.stderr
error: expected one of `<`, `<=`, `=`, `==`, `>=`, `>`, `!=`
 --> tests/fixtures/fail/bad_operator.rs:6:34
  |
6 | #[measured(cyclomatic_complexity ?? 10)]
  |                                  ^
